<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DevicesActivity"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="38dp"
        android:layout_height="31dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toTopOf="@+id/device"
        app:layout_constraintEnd_toStartOf="@+id/Connected"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Connected"
        android:layout_width="369dp"
        android:layout_height="30dp"
        android:fontFamily="serif"
        android:text="@string/connected_devices"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/device"
        android:layout_width="408dp"
        android:layout_height="61dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/t1stdevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/t2ndDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/t3rddevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_3" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/t4thDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_4" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="406dp"
        android:layout_height="513dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>