<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <Button
        android:id="@+id/Scan"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="388dp"
        android:background="@drawable/buttons"
        android:text="@string/button_scan"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/History"
        style="@android:style/Widget.DeviceDefault.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/buttons"
        android:text="@string/button_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Config"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/buttons"
        android:text="@string/button_config"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Settings"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttons"
        android:text="@string/button_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Devices"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="388dp"
        android:background="@drawable/buttons"
        android:text="@string/button_connected"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/red"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Contact"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/design_default_color_error"
        android:forceDarkAllowed="true"
        android:text="@string/button_contact_us"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/red"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="q" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="413dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:text="@string/logged_in_as_admin"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>