<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AnalysisActivity">

    <Button
        android:id="@+id/SmartScan"
        android:layout_width="358dp"
        android:layout_height="89dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttons"
        android:text="@string/smart_scan"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#1f92f5"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/QuickScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/QuickScan"
        android:layout_width="358dp"
        android:layout_height="89dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttons"
        android:text="@string/quick_scan"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#5f42e0"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/FullScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/FullScan"
        android:layout_width="358dp"
        android:layout_height="89dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttons"
        android:text="@string/full_scan"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#880ed5"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>